<resources>
    <string name="app_name">Bea Estils App</string>
    <string name="str_citas">Citas</string>
    <string name="str_calendario">Calendario</string>
    <string name="str_servicios">Servicios</string>
    <string name="str_clientes">Clientes</string>
    <string name="str_citasPendientes">Próximas Citas</string>
    <string name="str_clientesPendientes">Próximos Clientes</string>
    <string name="str_nuevaCita">Nueva Cita</string>
    <string name="str_buscarCita">Buscar Cita</string>
    <string name="str_nuevoCliente">Nuevo Cliente</string>
    <string name="str_buscarCliente">Buscar Cliente</string>
    <string name="str_cliente">Client@</string>
    <string name="str_mechas">Mechas</string>
    <string name="str_cortar">Cortar</string>
    <string name="str_tinte">Tinte</string>
    <string name="str_lavarMarcar">Lavar y Marcar</string>
    <string name="str_extraLargo">+Largo</string>
    <string name="str_hombre">Hombre</string>
    <string name="str_corto">-Corto</string>
    <string name="str_alisado">Alisado</string>
    <string name="str_tratamiento">Tratamiento</string>
    <string name="str_guardar">Guardar</string>
    <string name="str_tiempo">Tiempo estimado</string>
    <string name="str_nombre">Nombre:</string>
    <string name="str_apellidos">Apellidos:</string>
    <string name="str_telefono">Teléfono:</string>
    <string name="str_mail">Mail:</string>
    <string name="str_genero">Género:</string>
    <string name="str_mujer">Mujer</string>
    <string name="str_direccion">Dirección:</string>
    <string name="str_dia">Selecciona el día</string>
    <string name="str_hora">Selecciona la hora</string>
    <string name="str_fecha">Fecha</string>
    <string name="str_lista_servicios">Servicios contratados</string>
    <string name="str_cliente_guardado">Client@</string>
    <string name="str_dia_sel">Día: dd/mm/aaaa"</string>
    <string name="str_hora_sel">Hora: 00:00"</string>

</resources>