<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/dcLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
android:padding="10dp"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
    <ImageView
        android:id="@+id/logo"
        android:layout_gravity="center|end"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"

        android:padding="10dp"
        tools:ignore="UseAppTint"

        />
        <TextView
            android:id="@+id/txtNuevaCita"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/str_nuevaCita"
            android:textAllCaps="true"
            android:layout_gravity="center|start"
            android:textStyle="bold"
            android:textColor="@color/purple"
            android:textSize="50dp"
            />
    </FrameLayout>

    <ScrollView
        android:id="@+id/scOpciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@+id/dcLayout">

        <LinearLayout
            android:id="@+id/opciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/txtCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|start"
                android:text="@string/str_cliente"
                android:textAllCaps="true"
                android:textColor="@color/purple"
                android:textSize="30dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/EditCliente"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_cliente"
                android:inputType="textPersonName"></EditText>

            <TextView
                android:id="@+id/txtServicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|start"
                android:text="@string/str_servicios"
                android:textAllCaps="true"
                android:textColor="@color/purple"
                android:textSize="30dp"
                android:textStyle="bold" />


            <ScrollView
                android:id="@+id/scServicios"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:fadeScrollbars="false"
                android:scrollbarStyle="outsideInset"
                android:scrollbars="vertical"
                android:background="@color/light_purple">

                <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/servicios"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cbCortar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_column="0"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/str_cortar"
                        android:textSize="20dp" />

                    <CheckBox
                        android:id="@+id/cbLavarMarcar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_column="1"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/str_lavarMarcar"
                        android:textSize="20dp" />

                    <CheckBox
                        android:id="@+id/cbMechas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="2"
                        android:layout_column="0"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/str_mechas"
                        android:textSize="20dp" />

                    <CheckBox
                        android:id="@+id/cbTinte"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="2"
                        android:layout_column="1"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/str_tinte"
                        android:textSize="20dp" />

                    <CheckBox
                        android:id="@+id/cbTratamiento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="3"
                        android:layout_column="0"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/str_tratamiento"
                        android:textSize="20dp" />

                    <CheckBox
                        android:id="@+id/cbAlisado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="3"
                        android:layout_column="1"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/str_alisado"
                        android:textSize="20dp" />

                    <CheckBox
                        android:id="@+id/cbExtraLargo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="4"
                        android:layout_column="0"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/str_extraLargo"
                        android:textSize="20dp" />

                    <CheckBox
                        android:id="@+id/cbHombre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="4"
                        android:layout_column="1"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/str_corto"
                        android:textSize="20dp" />

                    <CheckBox
                        android:id="@+id/cbCorto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="5"
                        android:layout_column="0"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/str_hombre"
                        android:textSize="20dp" />

                </GridLayout>
            </ScrollView>

            <TextView
                android:id="@+id/txtTiempoEstimado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|start"
                android:text="@string/str_tiempo"
                android:textAllCaps="true"
                android:textColor="@color/purple"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTiempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_horas"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="106dp"
                tools:layout_editor_absoluteY="496dp" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rngTiempo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom="0"
                android:valueTo="6"
                android:scrollbarSize="10dp"
                app:layout_constraintTop_toBottomOf="@+id/scServicios" />


        </LinearLayout>

    </ScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/scOpciones"

        >
    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:padding="20dp"
        android:text="@string/str_guardar"
        android:textColor="@color/white"
        android:textSize="20dp"


        />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>