<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/dcLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="top"
android:padding="10dp"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
    <ImageView
        android:id="@+id/logo"
        android:layout_gravity="center|end"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"

        android:padding="10dp"
        tools:ignore="UseAppTint"

        />
        <TextView
            android:id="@+id/txtCitas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_citas"
            android:textAllCaps="true"
            android:layout_gravity="center|start"
            android:textStyle="bold"
            android:textColor="@color/purple"
            android:textSize="50dp"
            />
    </FrameLayout>
    <FrameLayout
        android:id="@+id/opciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dcLayout">

        <Button
            android:id="@+id/btnNuevaCita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:background="@drawable/button"
            android:padding="20dp"
            android:text="@string/str_nuevaCita"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btnBuscarCita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:background="@drawable/button"
            android:padding="20dp"
            android:text="@string/str_buscarCita"
            android:textColor="@color/white"
            android:textSize="20dp" />




    </FrameLayout>
<LinearLayout
    android:id="@+id/proximasCitas"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/opciones">
    <TextView
        android:id="@+id/texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_citasPendientes"
        android:textAllCaps="true"
        android:layout_gravity="top|center"
        android:textStyle="bold"
        android:textColor="@color/purple"
        android:textSize="20dp"
        />

</LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCitas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/proximasCitas"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/light_purple"/>


</androidx.constraintlayout.widget.ConstraintLayout>